--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-qrcode==7.3.1
-Telethon==1.27.0
-requests==2.27.1
-Pillow==9.0.0
-python-socks==1.2.4
-async_timeout==4.0.2
-prettytable==3.0.0
+qrcode
+Telethon
+requests
+Pillow
+python-socks
+async_timeout
+prettytable
