--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+bs4==0.0.1
 qrcode==7.3.1
 Telethon==1.27.0
 requests==2.27.1
@@ -5,3 +6,4 @@ Pillow==9.0.0
 python-socks==1.2.4
 async_timeout==4.0.2
 prettytable==3.0.0
+httpx==0.23.3
